--- a/html/games/game4p.html
+++ b/html/games/game4p.html
@@ -6,12 +6,13 @@
     <link href="https://fonts.googleapis.com/css?family=Orbitron:500" rel="stylesheet">
     <link rel="stylesheet" href="../../css/gameboard.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="shortcut icon" href="../../images/space-ship.png" />
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="../../images/space-ship.png"/>
     <title>Wikody: 4 Player</title>
   </head>
   <body class="noselect">
 
-    <div class="" id="container">
+    <div id="container">
 
       <div class="row">
         <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
