--- a/html/home.html
+++ b/html/home.html
@@ -38,19 +38,19 @@
       <div class="row">
         <div class="row">
           <div class="col s4 m4 l4 offset-s4 offset-m4 offset-l4 playerSelect">
-            <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3" href="games/game2p.html"> 2 Players</a>
+            <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3 players" href="game.html">2 Players</a>
           </div>
         </div>
 
         <div class="row">
           <div class="col s4 m4 l4 offset-s4 offset-m4 offset-l4 playerSelect">
-            <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3" href="games/game3p.html">3 Players</a>
+            <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3 players" href="game.html">3 Players</a>
           </div>
         </div>
 
         <div class="row">
           <div class="col s4 m4 l4 offset-s4 offset-m4 offset-l4 playerSelect">
-            <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3" href="games/game4p.html">4 Players</a>
+            <a class="waves-effect waves-light btn center #b0bec5 blue-grey lighten-3 players" href="game.html">4 Players</a>
           </div>
         </div>
       </div>
@@ -60,5 +60,6 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+    <script src="../js/home.js"></script>
   </body>
 </html>
