--- a/html/help.html
+++ b/html/help.html
@@ -8,7 +8,43 @@
   </head>
   <body>
 
-    
+    <div id="outer-container">
+      <div id="inner-container">
+        <div class="row">
+          <div class="col s6">
+            <div class="row">
+
+            </div>
+            <div class="row">
+
+            </div>
+          </div>
+          <div class="col s6">
+            <div class="row">
+
+            </div>
+            <div class="row">
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="page-footer #00695c teal darken-3">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Navigate the mothership</h5>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="home.html">The Bridge</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
