--- a/html/help.html
+++ b/html/help.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <link rel="stylesheet" href="../css/help.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Wikody: Help</title>
   </head>
   <body>
 
